@@ -130,8 +130,9 @@ The caller is responsible for `session.close()` in all branches (preferably try-
 `ChaosPlatform.installLocally()` uses the JDK Attach API to self-attach the agent. Requirements:
 
 - JDK (not JRE): requires `tools.jar` (JDK 8) or the `java.attach` module (JDK 9+)
-- `--add-opens java.base/jdk.internal.misc=ALL-UNNAMED` may be required on JDK 21+ for some Attach API paths
 - `-Djdk.attach.allowAttachSelf=true` must be set on JDK 9+ to allow a process to attach to itself. `ChaosAgentExtension` sets this as a system property before self-attach. Alternatively, set it in the JVM command line.
+
+**No `--add-opens` flags required.** The agent self-grants every JDK module open it needs at install time — manifest `Add-Opens` for `-javaagent:` startup attach, `Instrumentation#redefineModule` for self-attach. See [Module access strategy](instrumentation.md#module-access-strategy).
 - The agent JAR must be locatable on the classpath. `ChaosPlatform` uses a classpath scan to find the bootstrap JAR.
 
 **Gradle/Maven test configuration example**:
